# ffmpeg-asm

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c
src/asm/: vec_basic.asm
